--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,39 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+#two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 75px;
+}
+
+#two .content {
+    display: flex;
+    gap: 50px;
+}
+
+#two h1 {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+#two .image-box {
+    width: 150px;
+    height: 150px;
+    border: 3px #3882f6 solid;
+    border-radius: 15px;
+}
+
+#two img {
+    width: 150px;
+    height: 150px;
+}
+
+#two .text {
+    text-align: center;
+    width: 150px;
+    color: gray;
+}
