--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,35 @@ body {
     width: 150px;
     color: gray;
 }
+
+#three {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding: 100px 0;
+}
+
+#three h2, #three h4 {
+    width: 830px;
+}
+
+#three h2 {
+    color: #1F2937;
+    font-style: italic;
+    font-weight: normal;
+    font-size: 36px;
+    text-align: left;
+
+    margin: 0;
+}
+
+#three h4 {
+    text-align: right;
+    align-self: flex-end;
+    font-size: 24px;
+    
+
+    margin: 0;
+}
