--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body {
     padding: 0px 400px;
 }
 
-/*SECTION 1*/
 #one {
     color: #f9faf8;
     background-color: #1f2937;
@@ -146,4 +145,43 @@ body {
     
 
     margin: 0;
+}
+
+#four {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 0;
+}
+
+#four .container {
+    border-radius: 12px;
+    width: 900px;
+    height: 140px;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    color: #f9faf8;
+}
+
+#four h3, #four p {
+    margin: 5px;
+}
+
+#four button {
+    border: 2px solid white;
+    border-radius: 5px;
+    background-color: #3882f6;
+    color: #f9faf8;
+    text-align: center;
+    width: 120px;
+    height: 36px;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+#five {
+    background-color: #1F2937;
 }
